--- a/FigureLib/FigureLib.csproj
+++ b/FigureLib/FigureLib.csproj
@@ -1,7 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\You\Desktop\Don't touch(Kondratev directory)\HWTask#3\HW_KPLP_Task3\FigureLib\FigureLib.xml</DocumentationFile>
   </PropertyGroup>
 
 </Project>
