--- a/FigureLib/FigureLib.csproj
+++ b/FigureLib/FigureLib.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\You\Desktop\Don't touch(Kondratev directory)\HWTask#3\HW_KPLP_Task3\FigureLib\FigureLib.xml</DocumentationFile>
+    <DocumentationFile>D:\Учёба\2-й курс\Вторая читка\КПиЯП\ДКР\HWTask2\HW_KPandLP_Task3\HW_KPadnLP_Task3\FigureLib\FigureLib.xml</DocumentationFile>
   </PropertyGroup>
 
 </Project>
